<package>
  <name>dumbo_apps</name>
  <version>0.1.0</version>
  <description>
    Apps and demos that can be run on CVAP's Dumbo robot
  </description>
  <license>BSD</license>

  <url>http://wiki.ros.org/dumbo_apps</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>dumbo_passive_force_control</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
